--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SparkZx</title>
+    <title>SparkZx WebSite</title>
     <style>
          :root {
             --neon: #00ffff;
@@ -697,5 +697,6 @@
         });
     </script>
 </body>
+
 
 </html>
